readable: fix margins on navbar-form, closes #257

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -5805,6 +5805,9 @@ button.close {
 .navbar-brand {
   margin-top: 6px;
 }
+.navbar-form {
+  margin-top: 12px;
+}
 .btn {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
