--- a/readable/bootswatch.less
+++ b/readable/bootswatch.less
@@ -36,6 +36,10 @@
   &-brand {
     margin-top: 6px;
   }
+
+  &-form {
+    margin-top: 12px;
+  }
 }
 
 // Buttons ====================================================================
